Initial playback logic for conductor scenario, 2 instruments and 2 bars, switchable intensity

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <div>
     <button data-imusic-play="A">Loop A</button>
-    <button data-imusic-play="B">Loop B</button>
     <button data-imusic="stop">STOP</button>
+  </div>
+  <div>
+    <button onclick="setGuitarIntensity(1);">Guitar A</button>
+    <button onclick="setGuitarIntensity(2);">Guitar B</button>
+  </div>
+  <div>
+    <button onclick="setStringsIntensity(1);">Strings A</button>
+    <button onclick="setStringsIntensity(2);">Strings B</button>
   </div>
 </html>
 
