--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="hands.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="instruction.css" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
@@ -38,6 +39,8 @@
     </div>
   </div>
 
+  
+
   <div class="instrument_grid">
     <div class="instrument_row">
       <div class="instrument_area">
@@ -60,7 +63,16 @@
       </div>
     </div>
   </div>
-    
+  
+  <div>
+
+  <div >
+    <a href="instruction.html"><img src="images/surprise.jpeg" class="surprise" style="width:100px;height:100px;"></a>
+  </div>
+
+  </div>
+
+
 </body>
 
 </html>
