--- a/index.html
+++ b/index.html
@@ -79,33 +79,33 @@
       <th class="table_head">Action</th>
       </tr>
       <tr class="table_content">
-          <td>Pinch<img src="images/pinch.svg" class="gesture_image" ></td>
-          <td>Start</td>
+          <td>1.Pinch<img src="images/pinch.svg" class="gesture_image" ></td>
+          <td>1.Start changing some value. When pinching, then twisting the hand, you can adjust for instance the volume of an instrument</td>
       </tr>
       <tr class="table_content">
-          <td>Thumbs up<img src="images/up.svg"  class="gesture_image" ></td>
-          <td>Turn on instrument </td>
+          <td>2.Thumbs up<img src="images/up.svg"  class="gesture_image" ></td>
+          <td>2.Turn on instrument </td>
       </tr>
       <tr class="table_content">
-          <td>Thumbs down<img src="images/down.svg"  class="gesture_image" ></td>
-          <td>Turn off instrument</td>
+          <td>3.Thumbs down<img src="images/down.svg"  class="gesture_image" ></td>
+          <td>3.Turn off instrument</td>
       </tr>
       <tr class="table_content">
-          <td>Closed fist<img src="images/fist.svg"  class="gesture_image" ></td>
-          <td>Intensity up</td>
+          <td>4.Closed fist<img src="images/fist.svg"  class="gesture_image" ></td>
+          <td>4.Intensity up</td>
       </tr>
       <tr class="table_content">
-          <td>Open palm<img src="images/palm.svg"  class="gesture_image" ></td>
-          <td>Intensity down</td>
+          <td>5.Open palm<img src="images/palm.svg"  class="gesture_image" ></td>
+          <td>5.Intensity down</td>
       </tr>
       <tr class="table_content">
-          <td>V-sign<img src="images/V1.svg"  class="gesture_image" > <img src="images/V2.svg"  class="gesture_image" ></td>
-          <td>Play a soothing track</td>
+          <td>6.V-sign <img src="images/V2.svg"  class="gesture_image" ></td>
+          <td>6.Play a soothing track</td>
       </tr>
       <tr class="table_content">
-          <td>Pointing in a direction<img src="images/pointer.svg"  class="gesture_image" ></td>
+          <td>7.Pointing in a direction<img src="images/pointer.svg"  class="gesture_image" ></td>
           <td>
-              <p>Switch track:</p>
+              <p>7.Switch track:</p>
               <ol>
               <li>Up → first</li>
               <li>Down → last</li>
