--- a/index.html
+++ b/index.html
@@ -1,133 +1,166 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="instruction.css" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="style.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="instruction.css"
+      crossorigin="anonymous"
+    />
 
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
-  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Virtual Conductor</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="video_container">
+      <video class="input_video"></video>
+      <canvas class="output_canvas"></canvas>
+    </div>
 
-  <div class="video_container">
-    <video class="input_video"></video>
-    <canvas class="output_canvas"></canvas>
-  </div>
+    <div class="imusic_interface">
+      <div>
+        <button onclick="iMusic.play();">PLAY</button>
+        <button data-imusic="stop">STOP</button>
+      </div>
+      <div>
+        <button onclick="setIntensity(0, 1);">Guitar A</button>
+        <button onclick="setIntensity(0, 2);">Guitar B</button>
+        <button onclick="setIntensity(0, 0);">Guitar Off</button>
+      </div>
+      <div>
+        <button onclick="setIntensity(1, 1);">Strings A</button>
+        <button onclick="setIntensity(1, 2);">Strings B</button>
+        <button onclick="setIntensity(1, 0);">Strings Off</button>
+      </div>
+    </div>
 
-  <div class="imusic_interface">
+    <div class="instrument_grid">
+      <div class="instrument_row">
+        <div class="instrument_area">
+          <img class="instrument_image" src="images/guitar.svg" alt="Guitar" />
+          <div id="indicator_0" class="instrument_status_indicator">1</div>
+        </div>
+        <div class="instrument_area">
+          <img class="instrument_image" src="images/drums.svg" alt="Drums" />
+          <div id="indicator_1" class="instrument_status_indicator">1</div>
+        </div>
+      </div>
+      <div class="instrument_row">
+        <div class="instrument_area">
+          <img
+            class="instrument_image"
+            src="images/piano-top-view.svg"
+            alt="Piano"
+          />
+          <div id="indicator_2" class="instrument_status_indicator">1</div>
+        </div>
+        <div class="instrument_area">
+          <img
+            class="instrument_image"
+            src="images/bass-guitar.svg"
+            alt="Bass Guitar"
+          />
+          <div id="indicator_3" class="instrument_status_indicator">1</div>
+        </div>
+      </div>
+    </div>
+
+    <div id="instructionsContainer">
+      <div id="instructions" onclick="toggleInstructions()">
+        <h2>Instructions</h2>
+        <p>
+          Move your hand into the view of the camera to start all instruments.
+        </p>
+        <p>
+          Control each instrument separately by making hand gestures inside the
+          rectangle area belonging to that instrument.
+        </p>
+        <p>
+          The color of the circles in the corners of each area indicate whether
+          the instrument is playing, using red/green color.<br/>The number indicates
+          which intensity they are playing at.
+        </p>
+        <table>
+          <tr>
+            <th class="table_head">Gesture</th>
+            <th class="table_head"></th>
+            <th class="table_head">Action</th>
+          </tr>
+          <tr class="table_content">
+            <td>Thumbs up</td>
+            <td><img src="images/up.svg" class="gesture_image" /></td>
+            <td>Turn the instrument on</td>
+          </tr>
+          <tr class="table_content">
+            <td>Thumbs down</td>
+            <td><img src="images/down.svg" class="gesture_image" /></td>
+            <td>Turn the instrument off</td>
+          </tr>
+          <tr class="table_content">
+            <td>Index finger up</td>
+            <td>
+              <img
+                src="images/pointer.svg"
+                class="gesture_image rotate_minus90"
+              />
+            </td>
+            <td>Switch to instrument intensity 1</td>
+          </tr>
+          <tr class="table_content">
+            <td>Index and long finger up</td>
+            <td><img src="images/V2.svg" class="gesture_image" /></td>
+            <td>Switch to instrument intensity 2</td>
+          </tr>
+        </table>
+
+
+      <div id="dismissButton">
+        Dismiss
+      </div>
+      </div>
+    </div>
+
     <div>
-      <button onclick="iMusic.play();">PLAY</button>
-      <button data-imusic="stop">STOP</button>
+      <button id="toggleInstructionsButton" onclick="toggleInstructions()">
+        Instructions
+      </button>
     </div>
-    <div>
-      <button onclick="setIntensity(0, 1);">Guitar A</button>
-      <button onclick="setIntensity(0, 2);">Guitar B</button>
-      <button onclick="setIntensity(0, 0);">Guitar Off</button>
-    </div>
-    <div>
-      <button onclick="setIntensity(1, 1);">Strings A</button>
-      <button onclick="setIntensity(1, 2);">Strings B</button>
-      <button onclick="setIntensity(1, 0);">Strings Off</button>
-    </div>
-  </div>
-
-
-  <div class="instrument_grid">
-    <div class="instrument_row">
-      <div class="instrument_area">
-        <img class="instrument_image" src="images/guitar.svg" alt="Guitar"/>
-        <div id="indicator_0" class="instrument_status_indicator">1</div>
-      </div>
-      <div class="instrument_area">
-        <img class="instrument_image" src="images/drums.svg" alt="Drums"/>
-        <div id="indicator_1" class="instrument_status_indicator">1</div>
-      </div>
-    </div>
-    <div class="instrument_row">
-      <div class="instrument_area">
-        <img class="instrument_image" src="images/piano-top-view.svg" alt="Piano"/>
-        <div id="indicator_2" class="instrument_status_indicator">1</div>
-      </div>
-      <div class="instrument_area">
-        <img class="instrument_image" src="images/bass-guitar.svg" alt="Bass Guitar"/>
-        <div id="indicator_3" class="instrument_status_indicator">1</div>
-      </div>
-    </div>
-  </div>
-
-
-  
-  <!-- <button class="click">Instruction</button> -->
-
-<div>
-  <p><button id="show" onclick="show()">Instruction</button></p>
-  <div id="instruction">
-    <!-- <img src="images/back.svg" class="leftarrow" style="width:50px;height:50px;"> -->
-    <table>
-      <tr>
-      <th class="table_head">Gesture</th>
-      <th class="table_head">Action</th>
-      </tr>
-      <tr class="table_content">
-          <td>1.Pinch<img src="images/pinch.svg" class="gesture_image" ></td>
-          <td>1.Start changing some value. When pinching, then twisting the hand, you can adjust for instance the volume of an instrument</td>
-      </tr>
-      <tr class="table_content">
-          <td>2.Thumbs up<img src="images/up.svg"  class="gesture_image" ></td>
-          <td>2.Turn on instrument </td>
-      </tr>
-      <tr class="table_content">
-          <td>3.Thumbs down<img src="images/down.svg"  class="gesture_image" ></td>
-          <td>3.Turn off instrument</td>
-      </tr>
-      <tr class="table_content">
-          <td>4.Closed fist<img src="images/fist.svg"  class="gesture_image" ></td>
-          <td>4.Intensity up</td>
-      </tr>
-      <tr class="table_content">
-          <td>5.Open palm<img src="images/palm.svg"  class="gesture_image" ></td>
-          <td>5.Intensity down</td>
-      </tr>
-      <tr class="table_content">
-          <td>6.V-sign <img src="images/V2.svg"  class="gesture_image" ></td>
-          <td>6.Play a soothing track</td>
-      </tr>
-      <tr class="table_content">
-          <td>7.Pointing in a direction<img src="images/pointer.svg"  class="gesture_image" ></td>
-          <td>
-              <p>7.Switch track:</p>
-              <ol>
-              <li>Up → first</li>
-              <li>Down → last</li>
-              <li>Right → next</li>
-              <li>Left → previous</li>
-              </ol>
-              </td>
-      </tr>
-      </table>
-      <p><button id="hide" onclick="hide()">Back</button></p>
-  </div>
-</div>
-  
-
-
-</body>
-
+  </body>
 </html>
 <script type="module" src="hand_gestures.js"></script>
 <script src="imusic_091.js" data-music-structure="imusic.xml"></script>
 
 <script src="music_actions.js"></script>
 <script src="instruction.js"></script>
-
-
