Target indicators showing which instrument is being targeted and other small fixes

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
 
     <div class="instrument_grid">
       <div class="instrument_row">
-        <div class="instrument_area">
+        <div class="instrument_area" id="instrument_area_0">
           <img class="instrument_image" src="images/guitar.svg" alt="Guitar" />
           <div id="indicator_0" class="instrument_status_indicator">1</div>
         </div>
-        <div class="instrument_area">
+        <div class="instrument_area" id="instrument_area_1">
           <img class="instrument_image" src="images/drums.svg" alt="Drums" />
           <div id="indicator_1" class="instrument_status_indicator">1</div>
         </div>
       </div>
       <div class="instrument_row">
-        <div class="instrument_area">
+        <div class="instrument_area" id="instrument_area_2">
           <img
             class="instrument_image"
             src="images/piano-top-view.svg"
@@ -86,7 +86,7 @@
           />
           <div id="indicator_2" class="instrument_status_indicator">1</div>
         </div>
-        <div class="instrument_area">
+        <div class="instrument_area" id="instrument_area_3">
           <img
             class="instrument_image"
             src="images/bass-guitar.svg"
