Defines gestures more strictly and adds volume control with pinch

--- a/index.html
+++ b/index.html
@@ -71,10 +71,18 @@
         <div class="instrument_area" id="instrument_area_0">
           <img class="instrument_image" src="images/guitar.svg" alt="Guitar" />
           <div id="indicator_0" class="instrument_status_indicator">1</div>
+          <div id="volume_0" class="volume_bar_container">
+            <div class="volume_num">50</div> 
+            <div class="volume_bar"></div>
+          </div>
         </div>
         <div class="instrument_area" id="instrument_area_1">
           <img class="instrument_image" src="images/drums.svg" alt="Drums" />
           <div id="indicator_1" class="instrument_status_indicator">1</div>
+          <div id="volume_1" class="volume_bar_container">
+            <div class="volume_num">50</div> 
+            <div class="volume_bar"></div>
+          </div>
         </div>
       </div>
       <div class="instrument_row">
@@ -85,6 +93,10 @@
             alt="Piano"
           />
           <div id="indicator_2" class="instrument_status_indicator">1</div>
+          <div id="volume_2" class="volume_bar_container">
+            <div class="volume_num">50</div> 
+            <div class="volume_bar"></div>
+          </div>
         </div>
         <div class="instrument_area" id="instrument_area_3">
           <img
@@ -93,6 +105,10 @@
             alt="Bass Guitar"
           />
           <div id="indicator_3" class="instrument_status_indicator">1</div>
+          <div id="volume_3" class="volume_bar_container">
+            <div class="volume_num">50</div> 
+            <div class="volume_bar"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -145,10 +161,7 @@
           </tr>
         </table>
 
-
-      <div id="dismissButton">
-        Dismiss
-      </div>
+        <div id="dismissButton">Dismiss</div>
       </div>
     </div>
 
