--- a/conductor.html
+++ b/conductor.html
@@ -75,6 +75,9 @@
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div>
+
+          <img src="images/up.svg" id="image_reaction_0_up" class="image_reaction" style="display: none;"/>
+          <img src="images/down.svg" id="image_reaction_0_down" class="image_reaction" style="display: none;"/>
         </div>
         <div class="instrument_area" id="instrument_area_1">
           <img class="instrument_image" src="images/drums.svg" alt="Drums" />
@@ -83,6 +86,8 @@
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div>
+          <img src="images/up.svg" id="image_reaction_1_up" class="image_reaction" style="display: none;"/>
+          <img src="images/down.svg" id="image_reaction_1_down" class="image_reaction" style="display: none;"/>
         </div>
       </div>
       <div class="instrument_row">
@@ -97,6 +102,8 @@
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div>
+          <img src="images/up.svg" id="image_reaction_2_up" class="image_reaction" style="display: none;"/>
+          <img src="images/down.svg" id="image_reaction_2_down" class="image_reaction" style="display: none;"/>
         </div>
         <div class="instrument_area" id="instrument_area_3">
           <img
@@ -108,7 +115,9 @@
           <div id="volume_3" class="volume_bar_container">
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
-          </div>
+          </div> 
+          <img src="images/up.svg" id="image_reaction_3_up" class="image_reaction" style="display: none;"/>
+          <img src="images/down.svg" id="image_reaction_3_down" class="image_reaction" style="display: none;"/>
         </div>
       </div>
     </div>
