One and two finger pointers

--- a/conductor.html
+++ b/conductor.html
@@ -78,6 +78,8 @@
 
           <img src="images/up.svg" id="image_reaction_0_up" class="image_reaction" style="display: none;"/>
           <img src="images/down.svg" id="image_reaction_0_down" class="image_reaction" style="display: none;"/>
+          <img src="images/pointer.svg" id="image_reaction_0_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
+          <img src="images/V2.svg" id="image_reaction_0_v2" class="image_reaction" style="display: none;"/>
         </div>
         <div class="instrument_area" id="instrument_area_1">
           <img class="instrument_image" src="images/drums.svg" alt="Drums" />
@@ -88,6 +90,8 @@
           </div>
           <img src="images/up.svg" id="image_reaction_1_up" class="image_reaction" style="display: none;"/>
           <img src="images/down.svg" id="image_reaction_1_down" class="image_reaction" style="display: none;"/>
+          <img src="images/pointer.svg" id="image_reaction_1_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
+          <img src="images/V2.svg" id="image_reaction_1_v2" class="image_reaction" style="display: none;"/>
         </div>
       </div>
       <div class="instrument_row">
@@ -104,6 +108,8 @@
           </div>
           <img src="images/up.svg" id="image_reaction_2_up" class="image_reaction" style="display: none;"/>
           <img src="images/down.svg" id="image_reaction_2_down" class="image_reaction" style="display: none;"/>
+          <img src="images/pointer.svg" id="image_reaction_2_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
+          <img src="images/V2.svg" id="image_reaction_2_v2" class="image_reaction" style="display: none;"/>
         </div>
         <div class="instrument_area" id="instrument_area_3">
           <img
@@ -118,6 +124,8 @@
           </div> 
           <img src="images/up.svg" id="image_reaction_3_up" class="image_reaction" style="display: none;"/>
           <img src="images/down.svg" id="image_reaction_3_down" class="image_reaction" style="display: none;"/>
+          <img src="images/pointer.svg" id="image_reaction_3_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
+          <img src="images/V2.svg" id="image_reaction_3_v2" class="image_reaction" style="display: none;"/>
         </div>
       </div>
     </div>
