pinch display:none for all screen sections

--- a/conductor.html
+++ b/conductor.html
@@ -80,6 +80,7 @@
           <img src="images/down.svg" id="image_reaction_0_down" class="image_reaction" style="display: none;"/>
           <img src="images/pointer.svg" id="image_reaction_0_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
           <img src="images/V2.svg" id="image_reaction_0_v2" class="image_reaction" style="display: none;"/>
+          <img src="images/pinch.svg" id="image_reaction_0_pinch" class="image_reaction" style="display: none;"/>
         </div>
         <div class="instrument_area" id="instrument_area_1">
           <img class="instrument_image" src="images/drums.svg" alt="Drums" />
@@ -92,6 +93,7 @@
           <img src="images/down.svg" id="image_reaction_1_down" class="image_reaction" style="display: none;"/>
           <img src="images/pointer.svg" id="image_reaction_1_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
           <img src="images/V2.svg" id="image_reaction_1_v2" class="image_reaction" style="display: none;"/>
+          <img src="images/pinch.svg" id="image_reaction_1_pinch" class="image_reaction" style="display: none;"/>
         </div>
       </div>
       <div class="instrument_row">
@@ -110,6 +112,7 @@
           <img src="images/down.svg" id="image_reaction_2_down" class="image_reaction" style="display: none;"/>
           <img src="images/pointer.svg" id="image_reaction_2_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
           <img src="images/V2.svg" id="image_reaction_2_v2" class="image_reaction" style="display: none;"/>
+          <img src="images/pinch.svg" id="image_reaction_2_pinch" class="image_reaction" style="display: none;"/>
         </div>
         <div class="instrument_area" id="instrument_area_3">
           <img
@@ -126,6 +129,7 @@
           <img src="images/down.svg" id="image_reaction_3_down" class="image_reaction" style="display: none;"/>
           <img src="images/pointer.svg" id="image_reaction_3_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
           <img src="images/V2.svg" id="image_reaction_3_v2" class="image_reaction" style="display: none;"/>
+          <img src="images/pinch.svg" id="image_reaction_3_pinch" class="image_reaction" style="display: none;"/>
         </div>
       </div>
     </div>
