--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             <td><img src="images/V2.svg" class="gesture_image" /></td>
             <td>Switch to instrument intensity 2</td>
           </tr>
+          <tr class="table_content">
+            <td>Pinch</td>
+            <td><img src="images/pinch.svg" class="gesture_image" /></td>
+            <td>Change instrument volume</td>
+          </tr>
         </table>
 
         <div class="dismissButton"  onclick="location.href='./conductor.html'">Start</div>
