pinch to secondary instruction screen

--- a/conductor.html
+++ b/conductor.html
@@ -167,6 +167,11 @@
             <td><img src="images/V2.svg" class="gesture_image" /></td>
             <td>Switch to instrument intensity 2</td>
           </tr>
+          <tr class="table_content">
+            <td>Pinch</td>
+            <td><img src="images/pinch.svg" class="gesture_image" /></td>
+            <td>Change instrument volume</td>
+          </tr>
         </table>
 
         <div class="dismissButton">Dismiss</div>
