Smoothen animations for the UI and small fixes

--- a/conductor.html
+++ b/conductor.html
@@ -69,38 +69,29 @@
     <div class="instrument_grid">
       <div class="instrument_row">
         <div class="instrument_area" id="instrument_area_0">
-          <img class="instrument_image" src="images/guitar.svg" alt="Guitar" />
+          <img class="instrument_image" src="images/instruments/guitar.svg" alt="Guitar" />
           <div id="indicator_0" class="instrument_status_indicator">1</div>
           <div id="volume_0" class="volume_bar_container">
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div>
-
-          <img src="images/up.svg" id="image_reaction_0_up" class="image_reaction" style="display: none;"/>
-          <img src="images/down.svg" id="image_reaction_0_down" class="image_reaction" style="display: none;"/>
-          <img src="images/pointer.svg" id="image_reaction_0_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
-          <img src="images/V2.svg" id="image_reaction_0_v2" class="image_reaction" style="display: none;"/>
-          <img src="images/pinch.svg" id="image_reaction_0_pinch" class="image_reaction" style="display: none;"/>
+          <img id="image_reaction_0" class="image_reaction"/>
         </div>
         <div class="instrument_area" id="instrument_area_1">
-          <img class="instrument_image" src="images/drums.svg" alt="Drums" />
+          <img class="instrument_image" src="images/instruments/drums.svg" alt="Drums" />
           <div id="indicator_1" class="instrument_status_indicator">1</div>
           <div id="volume_1" class="volume_bar_container">
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div>
-          <img src="images/up.svg" id="image_reaction_1_up" class="image_reaction" style="display: none;"/>
-          <img src="images/down.svg" id="image_reaction_1_down" class="image_reaction" style="display: none;"/>
-          <img src="images/pointer.svg" id="image_reaction_1_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
-          <img src="images/V2.svg" id="image_reaction_1_v2" class="image_reaction" style="display: none;"/>
-          <img src="images/pinch.svg" id="image_reaction_1_pinch" class="image_reaction" style="display: none;"/>
+          <img id="image_reaction_1" class="image_reaction"/>
         </div>
       </div>
       <div class="instrument_row">
         <div class="instrument_area" id="instrument_area_2">
           <img
             class="instrument_image"
-            src="images/piano-top-view.svg"
+            src="images/instruments/piano-top-view.svg"
             alt="Piano"
           />
           <div id="indicator_2" class="instrument_status_indicator">1</div>
@@ -108,16 +99,12 @@
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div>
-          <img src="images/up.svg" id="image_reaction_2_up" class="image_reaction" style="display: none;"/>
-          <img src="images/down.svg" id="image_reaction_2_down" class="image_reaction" style="display: none;"/>
-          <img src="images/pointer.svg" id="image_reaction_2_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
-          <img src="images/V2.svg" id="image_reaction_2_v2" class="image_reaction" style="display: none;"/>
-          <img src="images/pinch.svg" id="image_reaction_2_pinch" class="image_reaction" style="display: none;"/>
+          <img id="image_reaction_2" class="image_reaction"/>
         </div>
         <div class="instrument_area" id="instrument_area_3">
           <img
             class="instrument_image"
-            src="images/bass-guitar.svg"
+            src="images/instruments/bass-guitar.svg"
             alt="Bass Guitar"
           />
           <div id="indicator_3" class="instrument_status_indicator">1</div>
@@ -125,11 +112,7 @@
             <div class="volume_num">50</div> 
             <div class="volume_bar"></div>
           </div> 
-          <img src="images/up.svg" id="image_reaction_3_up" class="image_reaction" style="display: none;"/>
-          <img src="images/down.svg" id="image_reaction_3_down" class="image_reaction" style="display: none;"/>
-          <img src="images/pointer.svg" id="image_reaction_3_pointer" class="image_reaction rotate_minus90" style="display: none;"/>
-          <img src="images/V2.svg" id="image_reaction_3_v2" class="image_reaction" style="display: none;"/>
-          <img src="images/pinch.svg" id="image_reaction_3_pinch" class="image_reaction" style="display: none;"/>
+          <img id="image_reaction_3" class="image_reaction"/>
         </div>
       </div>
     </div>
@@ -144,32 +127,32 @@
           </tr>
           <tr class="table_content">
             <td>Thumbs up</td>
-            <td><img src="images/up.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/up.svg" class="gesture_image"/></td>
             <td>Turn the instrument on</td>
           </tr>
           <tr class="table_content">
             <td>Thumbs down</td>
-            <td><img src="images/down.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/down.svg" class="gesture_image"/></td>
             <td>Turn the instrument off</td>
           </tr>
           <tr class="table_content">
             <td>Index finger up</td>
             <td>
               <img
-                src="images/pointer.svg"
-                class="gesture_image rotate_minus90"
+                src="images/gestures/pointer.svg"
+                class="gesture_image"
               />
             </td>
             <td>Switch to instrument style 1</td>
           </tr>
           <tr class="table_content">
             <td>Index and long finger up</td>
-            <td><img src="images/V2.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/V2.svg" class="gesture_image"/></td>
             <td>Switch to instrument style 2</td>
           </tr>
           <tr class="table_content">
             <td>Pinch</td>
-            <td><img src="images/pinch.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/pinch.svg" class="gesture_image"/></td>
             <td>Change instrument volume</td>
           </tr>
         </table>
