--- a/index.html
+++ b/index.html
@@ -50,32 +50,32 @@
           </tr>
           <tr class="table_content">
             <td>Thumbs up</td>
-            <td><img src="images/up.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/up.svg" class="gesture_image" /></td>
             <td>Turn the instrument on</td>
           </tr>
           <tr class="table_content">
             <td>Thumbs down</td>
-            <td><img src="images/down.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/down.svg" class="gesture_image" /></td>
             <td>Turn the instrument off</td>
           </tr>
           <tr class="table_content">
             <td>Index finger up</td>
             <td>
               <img
-                src="images/pointer.svg"
-                class="gesture_image rotate_minus90"
+                src="images/gestures/pointer.svg"
+                class="gesture_image"
               />
             </td>
             <td>Switch to instrument style 1</td>
           </tr>
           <tr class="table_content">
             <td>Index and long finger up</td>
-            <td><img src="images/V2.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/V2.svg" class="gesture_image" /></td>
             <td>Switch to instrument style 2</td>
           </tr>
           <tr class="table_content">
             <td>Pinch</td>
-            <td><img src="images/pinch.svg" class="gesture_image" /></td>
+            <td><img src="images/gestures/pinch.svg" class="gesture_image" /></td>
             <td>Change instrument volume</td>
           </tr>
         </table>
