--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="style.css"
+      href="/styles/style.css"
       crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="instruction.css"
+      href="/styles/instruction.css"
       crossorigin="anonymous"
     />
 
@@ -28,8 +28,8 @@
   </head>
   <body>
 
-    <div id="introductionScreen">
-      <h2>Virtual Conductor</h2>
+    <div class="introductionScreen">
+      <h2 class="headerTitle">Virtual Conductor</h2>
       <h4>Setup</h4>
       <p>To ensure that your hand gestures are recognised, keep your hands at a distance of about 50cm (20 inches) from the camera. <br />
         Make sure to avoid bright lights in the background, as they could interfere with the gesture recognition.</p>
@@ -59,28 +59,22 @@
             <td>Turn the instrument off</td>
           </tr>
           <tr class="table_content">
-            <td>Index finger up</td>
+            <td>Finger(s) held up</td>
             <td>
-              <img
-                src="images/gestures/pointer.svg"
-                class="gesture_image"
-              />
+              <img src="images/gestures/fingers_up_1.svg" class="gesture_image" />
+              <img src="images/gestures/fingers_up_2.svg" class="gesture_image" />
+              <img src="images/gestures/fingers_up_3.svg" class="gesture_image" />
             </td>
-            <td>Switch to instrument style 1</td>
-          </tr>
-          <tr class="table_content">
-            <td>Index and long finger up</td>
-            <td><img src="images/gestures/V2.svg" class="gesture_image" /></td>
-            <td>Switch to instrument style 2</td>
+            <td>Switch to instrument style 1, 2 or 3, <br />depending on the number of fingers held up</td>
           </tr>
           <tr class="table_content">
             <td>Pinch</td>
             <td><img src="images/gestures/pinch.svg" class="gesture_image" /></td>
-            <td>Change instrument volume</td>
+            <td>Set instrument volume</td>
           </tr>
         </table>
 
-        <div class="dismissButton"  onclick="location.href='./conductor.html'">Start</div>
+        <div class="dismissButton"  onclick="location.href='/ensembles.html'">Start</div>
 
     </div>
   </body>
